<resources>
    <string name="app_name">Gigya Sample</string>

    <!-- General -->
    <string name="rest_error_title">Request error</string>
    <string name="logout">Logout</string>
    <string name="not_logged_in">Not logged in.\nPlease log in or register a new account</string>
    <string name="logged_out">Logged out of your account</string>
    <string name="account_updated">Account updated</string>
    <string name="account_not_available">Account info not available.\nCall "getAccount" first</string>
    <string name="choose_action">Choose an action from\nthe drawer menu</string>
    <string name="re_init">Re-init</string>
    <string name="clear">Clear</string>
    <string name="logged_in">Logged in</string>
    <string name="toggle_interruptions">Toggle interruptions</string>
    <string name="verify_email">Verify Email</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name unavailable</string>
    <string name="nav_header_subtitle">User email unavailable</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_api_reference">Api reference</string>
    <string name="nav_native_login">Show native login options</string>
    <string name="nav_show_screen_sets">Show screensets</string>
    <string name="nav_show_native_screen_sets">Show native screensets</string>
    <string name="nav_forgot_password">Forgot password</string>
    <string name="nav_verify_login">Verify Login</string>
    <string name="nav_set_account_info">Set Account</string>
    <string name="nav_get_account_info">Get Account</string>
    <string name="nav_register">Register</string>
    <string name="nav_add_connection">Add connection</string>
    <string name="nav_remove_connection">Remove connection</string>
    <string name="nav_login_with_provider">Login with provider</string>
    <string name="nav_login">Login </string>
    <string name="nav_send_request">Send request</string>
    <string name="nav_ui_reference">UI reference</string>

    <!-- Helper Strings -->
    <string name="send_request_test_no_parameters">socialize.getAvailableProviders</string>
    <string name="opt_in_for_push_tfa">Opt in for push TFA</string>
    <string name="get_account_invalidate_cache">Get Account + Invalidate cache</string>
    <string name="register_for_push_authentication">Register for push authentication</string>
    <string name="otp_login">OTP login</string>
    <string name="sso_login">SSO login</string>
    <string name="is_session_valid">Is session valid</string>


</resources>
