<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reinit"
        android:orderInCategory="100"
        android:title="@string/re_init"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_interruptions"
        android:orderInCategory="100"
        android:title="@string/toggle_interruptions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_person_24dp"
        android:orderInCategory="100"
        android:title="@string/logged_in"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>
